codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__review_queues_user_messages_snapshot.snap
---
source: tui/src/chatwidget/tests.rs
expression: term.backend().vt100().screen().contents()
---










• Z Working (0s • esc to interrupt)

  ↳ Queued while /review is running.
    ⌥ + ↑ edit

› Ask Codex to do anything

  ? for shortcuts                                            100% context left
